--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
       <div class="hero-info">
         <h1>Haykal Aulil Albab</h1>
-        <h2>Frontend Developer | UI/UX Designer | Videographer</h2>
+        <h2>Junior Web Developer</h2>
         <div class="logo-container">
           <a href="https://github.com/haykal-proge/"
             ><img src="assets/github_light.png" alt="github logo"
